crates/parser/src/tests/snapshots/kclvm_parser__tests__types__union_type_0.snap
---
source: parser/src/tests/types.rs
expression: "crate::tests::parsing_type_string(r####\"int|str\"####)"
---
Node {
    node: Union(
        UnionType {
            type_elements: [
                Node {
                    node: Basic(
                        Int,
                    ),
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 3,
                },
                Node {
                    node: Basic(
                        Str,
                    ),
                    filename: "",
                    line: 1,
                    column: 4,
                    end_line: 1,
                    end_column: 7,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 7,
}

